--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "sakai-ng",
-    "version": "19.0.1",
+    "name": "eventos-template",
+    "version": "1.0.0",
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
@@ -23,7 +23,7 @@
         "chart.js": "4.4.2",
         "primeclt": "^0.1.5",
         "primeicons": "^7.0.0",
-        "primeng": "^19.0.8",
+        "primeng": "^19.1.3",
         "rxjs": "~7.8.0",
         "tailwindcss-primeui": "^0.5.1",
         "tslib": "^2.3.0",
